# PasswordManager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  db.py  generate_password.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ci.yaml  release.yaml
.github/workflows/: ci.yaml  release.yaml
config/: config.py
src/sesame/: __main__.py  cli.py  config.py  sesame.py
src/sesame/db/: db.py
src/sesame/repository/: auth.py  db.py
src/sesame/service/: auth_service.py  encrypt_decrypt.py  generate_password.py  password_actions.py  qrng.py
src/sesame/service/entropy_sources/: csprng.py  entropy_factory.py  entropy_source.py  qrng.py
src/sesame/service/enum/: entropy_sources_enum.py
src/sesame/util/: functions.py
src/sesame/vault/: vault.py
