[build-system]
requires = ["setuptools>=67.6", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "sesame"
dynamic=["version"]
description = "CLI password manager tool built using Python and argon2"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi",
    "python-dotenv",
    "Requests"
]

[project.optional-dependencies]
dev = [
    "qiskit",
    "qiskit_aer",
]

[tool.isort]
profile = "black"

[project.scripts]
sesame = "sesame.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
