[build-system]
requires = ["setuptools>=67.6", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "sesame"
dynamic=["version"]
description = "CLI password manager tool built using Python and argon2"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = [
    "qiskit",
    "qiskit_aer",
]

[project.scripts]
sesame = "sesame.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.verison"
]

branch = "master"

build_command = "python -m build"

commit_parser = "conventional"

tag_format = "v{version}"

[dependency-groups]
dev = [
    "python-semantic-release>=10.6.1",
]
