[build-system]
requires = ["setuptools>=67.6"]
build-backend = "setuptools.build_meta"

[project]
name = "sesame"
version = "0.7.0"
description = "CLI password manager tool built using Python and argon2"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi",
    "python-dotenv",
    "rich",
    "Requests",
    "cryptography",
    "pyperclip",
    "typer",
    "simple-toml-configurator>=1.3.0",
]

[project.scripts]
sesame = "sesame.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
allow_zero_version = true

branch = "master"

build_command = "python -m build"

commit_parser = "conventional"

tag_format = "v{version}"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "bandit",
    "pre-commit",
    "build",
    "python-semantic-release>=10.6.1",
]
